issue-15228-Info-and-remove-buttons-misaligned-edit-page (#15250)
* Fix

* Add margin to filename

* fix label margins

--- a/dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
+++ b/dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
@@ -9604,16 +9604,20 @@ Styles for commons fields along the backend
   position: absolute;
 }
 
+#fileAssetThumbnailSliderWrapper {
+  margin-bottom: 8px;
+}
+
 .fileAjaxUploader {
   display: flex;
   align-items: center;
   border-radius: 2px;
-  border: solid 1px #C5C5C5;
   position: relative;
   height: 36px;
 }
 
 .fileAjaxUploader .fileAjaxUploaderForm {
+  border: solid 1px #C5C5C5;
   width: 100%;
 }
 
@@ -9629,9 +9633,8 @@ Styles for commons fields along the backend
   background-color: var(--color-main_mod);
 }
 
-.fileAjaxUploaderActions {
-  position: absolute;
-  right: 0;
+.fileAjaxUploaderActions div {
+  display: inline-block;
 }
 
 .fileAjaxUploaderActions div:first-child {
@@ -9639,13 +9642,14 @@ Styles for commons fields along the backend
 }
 
 .fileAjaxUploaderFileName {
-  margin-left: 8px;
+  margin-right: 8px;
 }
 
 .fileAjaxUploaderStatus {
-  margin-right: 16px;
-  display: flex;
   align-items: center;
+  display: flex;
+  position: absolute;
+  right: 16px;
 }
 
 .fileAjaxUploaderStatusMsg {
